# simple-build-job

./: Dockerfile  Dockerfile.bazel  Dockerfile.loop  README.md  build-and-deploy-loop.json  build-and-deploy-loop.sh  build-dc.json  build-s2i-image.json  build.json  chain-build.json
utils/: loop.sh
