FROM centos:6

MAINTAINER Subin Modeel <smodeel@redhat.com>

USER root

ENV BAZEL_VERSION=$LIBRARY_VERSION
ENV JAVA_HOME=/usr/lib/jvm/java-1.8.0

COPY ./utils/ /utils/
## sourcestrategy doesnt work because git clone doesnt work here

RUN yum install -y java-1.8.0-openjdk-devel wget which findutils binutils gcc tar gzip zip unzip java java-devel git clang zlib-devel gcc-c++ \
	&& yum install -y centos-release-scl \
	&& yum install -y devtoolset-7 \
	&& scl enable devtoolset-7 bash \
	&& mkdir -p /tmp/bazel \
	&& cd /tmp/bazel \
	&& wget -q https://github.com/bazelbuild/bazel/releases/download/$BAZEL_VERSION/bazel-$BAZEL_VERSION-dist.zip \
	&& chmod a+x bazel*.zip \
	&& unzip bazel*.zip \
	&& export JAVA_HOME=/usr/lib/jvm/java-1.8.0

RUN  wget https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini -P /tmp \
    && wget https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini.asc -P /tmp \
    && cd /tmp \
    && \
    TINI_GPGKEY=595E85A6B1B4779EA4DAAEC70B588DFF0527A9B7; \
    found=''; \
    for server in \
        ha.pool.sks-keyservers.net \
        hkp://keyserver.ubuntu.com:80 \
        hkp://p80.pool.sks-keyservers.net:80 \
        pgp.mit.edu \
    ; do \
        echo "Fetching GPG key $TINI_GPGKEY from $server"; \
        gpg --batch --keyserver "$server" --recv-keys "$TINI_GPGKEY" && found=yes && break; \
    done; \
    test -z "$found" && echo >&2 "ERROR: failed to fetch GPG key $TINI_GPGKEY" && exit 1; \
    gpg --batch --verify /tmp/tini.asc /tmp/tini \
    && mv /tmp/tini /usr/local/bin/tini \
    && chmod +x /usr/local/bin/tini


USER 1001
# Make the default PWD somewhere that the user can write. This is
# useful when connecting with 'oc run' and starting a 'spark-shell',
# which will likely try to create files and directories in PWD and
# error out if it cannot.

# TODO: Set the default CMD for the image
CMD ["/usr/libexec/s2i/usage"]


